update collection list and collection page

--- a/snippets/css-variables.liquid
+++ b/snippets/css-variables.liquid
@@ -130,7 +130,7 @@
   assign color_button_secondary_text = '#fff'
   assign color_button_secondary_brightness = color_button_secondary_bg | color_brightness | round
   if color_button_secondary_brightness > 125
-    assign color_button_secondary_text = '#000'
+    assign color_button_secondary_text = '#6fbbde'
   endif
 
   comment
