--- a/templates/customers/login.liquid
+++ b/templates/customers/login.liquid
@@ -23,6 +23,9 @@
 						<a href="{{ routes.account_register_url }}">{{ 'layout.customer.create_account' | t }}</a>
 					</div>
 				{% endform %}
+				<!-- Begin ReCharge code -->
+				{% include 'subscription-account-login' %}
+				<!-- End ReCharge code -->
 			</div>
 
 			<div id="RecoverPasswordForm" class="text-left" style="display: none;">
