--- a/snippets/product-form.liquid
+++ b/snippets/product-form.liquid
@@ -43,6 +43,10 @@
 
 {%- form 'product', product, class: "product__form product__form--is-loading", data-product-form: '', id: product_form_id, data-enable-button: show_payment_button -%}
 
+  <!-- Begin ReCharge code -->
+  {% if product.available %}{% render 'subscription-product' %}{% endif %}
+  <!-- End ReCharge code -->
+
   <div class="shop-pay-terms">{{ form | payment_terms }}</div>
   {%- comment -%}
     Variants
