add shogun head to theme.liquid

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -154,6 +154,8 @@
   <script src="{{ 'theme.js' | asset_url }}" defer="defer"></script>
 
   {{ content_for_header }}
+
+  {% render 'shogun-head' %}
 </head>
 <script src="https://demandforapps.com/aodtabs/js/aod-tabs.js"></script>
 
