--- a/layout/theme.shogun.landing.liquid
+++ b/layout/theme.shogun.landing.liquid
@@ -162,6 +162,8 @@ This file can be re-written at any time.
 
   {{ content_for_header }}
 
+  {% render 'shogun-head' %}
+
 </head>
 
 <script src="https://demandforapps.com/aodtabs/js/aod-tabs.js"></script>
