--- a/snippets/subscription-account-login.liquid
+++ b/snippets/subscription-account-login.liquid
@@ -12,7 +12,7 @@
 	}
 </style>
 <div id="rc_login" style="display: none;">
-	<h5>Having issues managing your subscriptions?</h5>
+	<h5>Need help accessing your subscriptions?</h5>
 	<p>
 		<a href="/tools/recurring/get-subscription-access">Click here</a>
 	</p>
