--- a/snippets/product-form.liquid
+++ b/snippets/product-form.liquid
@@ -41,7 +41,7 @@
   assign product_form_id = "AddToCartForm--" | append: unique
 -%}
 
-{%- form 'product', product, class: "product__form product__form--is-loading", data-product-form: '', id: product_form_id, data-enable-button: show_payment_button -%}
+{%- form 'product', product, data-productid: product.id, class: "product__form product__form--is-loading", data-product-form: '', id: product_form_id, data-enable-button: show_payment_button -%}
 
   <!-- Begin ReCharge code -->
   {% if product.available %}{% render 'subscription-product' %}{% endif %}
